# eolie

./: .gitignore  Makefile.am  autogen.sh  configure.ac  eolie.in
data/: AboutDialog.ui.in  Appmenu.ui  Makefile.am  PopoverDownloads.ui  PopoverUri.ui  RowDownload.ui  SettingsDialog.ui  Shortcuts.ui  SidebarChild.ui  ToolbarActions.ui  ToolbarEnd.ui  ToolbarInfo.ui  ToolbarTitle.ui  application-legacy.css  application.css  eolie.gresource.xml  org.gnome.Eolie.appdata.xml  org.gnome.Eolie.appdata.xml.in  org.gnome.Eolie.desktop.in  org.gnome.Eolie.gschema.xml
hooks/: pre-commit.archlinux  pre-commit.debian  pre-commit.fedora  pre-commit.ubuntu
python-webextension/: Makefile  extension.py.in
src/: Makefile.am  application.py  art.py  container.py  database_adblock.py  database_bookmarks.py  database_history.py  define.py  downloads_manager.py  localized.py  navigation_manager.py  popover_downloads.py  popover_uri.py  search.py  settings.py  sqlcursor.py  stacksidebar.py  toolbar.py  toolbar_actions.py  toolbar_end.py  toolbar_info.py  toolbar_title.py  utils.py  web_view.py  window.py
