appdir = $(pythondir)/eolie/

app_PYTHON = \
    application.py\
    art.py\
    container.py\
    database_bookmarks.py\
    database_history.py\
    define.py\
    localized.py\
    popover_uri.py\
    settings.py\
    stacksidebar.py\
    sqlcursor.py\
    utils.py\
    toolbar.py\
    toolbar_actions.py\
    toolbar_end.py\
    toolbar_title.py\
    web_view.py\
    window.py
