appdir = $(pythondir)/eolie/

app_PYTHON = \
    application.py\
    art.py\
    container.py\
    database_adblock.py\
    database_bookmarks.py\
    database_history.py\
    downloads_manager.py\
    define.py\
    localized.py\
    popover_downloads.py\
    popover_uri.py\
    search.py\
    settings.py\
    stacksidebar.py\
    sqlcursor.py\
    utils.py\
    toolbar.py\
    toolbar_actions.py\
    toolbar_end.py\
    toolbar_title.py\
    web_view.py\
    window.py
